[tool.poetry]
name = "pyngo"
version = "1.0"
description = "A client for interacting with pongoOS."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/pyngo"

[tool.poetry.scripts]
pyngo = "pyngo.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
pyusb = "^1.2.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["pyngo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
